@startuml

title M20 APPLICATIONS LAYER

skinparam packageStyle rectangle
skinparam lineThickness 2

class ApplicationsTask 
{
    - Context _context
    + Initialize()
    + Run()
    + static void TaskEntry(void* param)
    - _ledStripsQueue : LedStripsQueue
    - _i2cInputQueue : I2cInputQueue
    - _i2cOutputQueue : I2cOutputQueue
}

class Task <<M00 System Task>>
{   
}

ApplicationsTask -u-|> Task

interface IEventListener
{
    + <<abstract>> OnJoystickDirectionChanged(
        IoStates::EJoystickId id, \nJoystickState::EDirection direction)
    + <<abstract>> OnJoystickButtonChanged(
        IoState:EJoystickId id, bool state)
    + <<abstract>> OnSystemButtonChanged(bool state)
}

class ApplicationsManager
{
    + ApplicationsManager(
        ApplicationsTask& applicationsTask, Context& context);
    + GetQueueWriters() : QueueWriters&
    + SetQueueWriters(QueueWriters& queueWriters)
    + AddApplications()
    + OnJoystickDirectionChanged(
        IoStates::EJoystickId id, \nJoystickState::EDirection direction)
    + OnJoystickButtonChanged(\n IoState:EJoystickId id, bool state)
    + OnSystemButtonChanged(bool state)
    + Run()
    + GetIoStates() : IoStates&
    + GetApplications() : std::vector<std::unique_ptr<Application>>&
    + GetActiveApplicationIndex() : int
    + SetActiveApplicationIndex(int index)
    + GetPausedApplicationIndex() : int
    - _activeApplicationIndex
    - _pausedApplicationIndex
}

ApplicationsManager -u-|> IEventListener

package QueueHandlers
{
    class QueueWriters
    {
        GetI2cOutputQueueWriter(): I2cOutputQueueWriter& 
        GetLedStripsQueueWriter(): LedStripsQueueWriter&
    }

    class QueueProcessor <<M30_Messages>> {}

    class I2cInputQueueReader
    {
    }

    I2cInputQueueReader -u-|> QueueProcessor

    I2cInputQueueReader o-- ApplicationsManager

    class I2cOutputQueueWriter
    {
        SendLed(ELedId id, bool state)
        SendLcd2004Line(
            uint8_t lineNumber, std::string line)
    }

    I2cOutputQueueWriter -u-|> QueueProcessor

    class LedStripsQueueWriter
    {

    }

    LedStripsQueueWriter -u-|> QueueProcessor
    
    QueueWriters o-- I2cOutputQueueWriter
    QueueWriters o-- LedStripsQueueWriter
    
    ApplicationsTask *-- QueueWriters
    ApplicationsTask *-- LedStripsQueueWriter
    ApplicationsTask *-- I2cInputQueueReader
    ApplicationsTask *-- I2cOutputQueueWriter

    ApplicationsManager o-- QueueWriters

    class I2cInputQueue <<M30_MESSAGE_LAYER>>
    {
    }

    class I2cOutputQueue <<M30_MESSAGE_LAYER>>
    {
    }

    class LedStripsQueue <<M30_MESSAGE_LAYER>>
    {
    }

    ApplicationsTask *-- I2cInputQueue
    ApplicationsTask *-- I2cOutputQueue
    ApplicationsTask *-- LedStripsQueue

    I2cInputQueueReader     o-- I2cInputQueue
    I2cOutputQueueWriter    o-- I2cOutputQueue 
    LedStripsQueueWriter o-- LedStripsQueue
}

package "I/O States"
{
    class JoystickState 
    {
        + EJoystickDirection { 
            Centered, Up, UpRight, Right, DownRight, \nDown, DownLeft, Left, UpLeft }
        - direction : EJoystickDirection
        - buttonState : bool
        + GetDirection() : EJoystickDirection
        + SetDirection(EJoystickDirection joystickDirection)
        + GetButtonState() : bool
        + SetButtonState(bool state)
    }
    
    class ButtonState 
    {
        - state : bool
        + GetState() : bool
        + SetState(bool state)
    }
    
    class IoStates
    {
        + EJoystickId : { Player1, Player2 }
        + GetJoystickState(EJoystickId): JoystickState
        + GetSystemButtonState(): ButtonState
    }

    IoStates *--"2" JoystickState
    IoStates *-- ButtonState
}

package "Applications" 
{
    interface IApplication 
    {
        + {abstract} Start()
        + {abstract} Pause()
        + {abstract} Resume()
        + {abstract} Stop()
        + {abstract} Run()
    }

    abstract class Application <<abstract>>
    {
        + EId { Menu, Pong }  
        + EType { Menu, Game, Demo, Tool, Utility }
        + GetApplicationsManager() : ApplicationsManager
        + GetId() : EId
        + GetType() : EType
        + GetName() : string
        + GetContext() : Context&
        - _id : EId
        - _type : EType
        - _name : string
        - _context : Context
        # _send : Send
    }

    Application -u-|> IApplication
    Application -u-|> IEventListener

    class Send
    {
        + Send(QueueWriters& queueWriters)
        'LEDs
        + Led(ELedId ledId, bool state)
        'LCD2004
        + Line(uint8_t line, char[16] line)
        'LED Strips
        + Orientation(bool horizontal)
        + Pixel(uint8_t x, uint8_t y, RGB rgb)
        + Row(uint8_t row, RGB rgb)
        + Column(uint8_t column, RGB rgb)
        'TM1637
        + Value(Types::ETm1637 id, uint32_t value)
        + Time(Types::ETm1637 id, uint8_t first, uint8_t second)
    }
    Send o-- QueueWriters

    Application *-- Send

    package "Menu Application" as MenuApplicationPackage
    {
        class MenuApplication 
        {
            + Start()
            + Pause()
            + Resume()
            + Stop()
            + Run()
                
            + OnJoystickDirectionChanged(
                IoStates::EJoystickId id, \nJoystickState::EDirection direction)
            + OnJoystickButtonChanged(
                IoState:EJoystickId id, bool state)
            + OnSystemButtonChanged(bool state)
        }

        class States
        {
            + GetSelectedAppNameIndex() const : EAppName 
            + GetSelectedViewModeIndex() const : EViewMode 
            + GetSelectedTagIndex() const : uint8_t
            + GetSelectedAppTypeIndex() const Application::EType
            + GetSelectedHighscoreIndex() const uint8_t
            + GetSwapFavoriteStatus() const : bool

            + GetCurrentState() const : EState
            
            + bool OnTimePassed()
            + void OnSystemButtonPressed()
            + void OnJoystickDirectionChanged(
                JoystickState::EDirection direction)
            + void OnJoystickUp()
            + void OnJoystickRight()
            + void OnJoystickDown()
            + void OnJoystickLeft()
            + void OnJoystickButtonPressed()
        }

        class Renderer 
        {
            + struct Result { string line1, string line2 }
            + GetMenuApplication() : MenuApplication
            + Render(const States& states) : Result
            + IsDirty() const : bool
            + GetCurrentResult() const : Result
        }

        MenuApplication *-- States
        MenuApplication *-- Renderer
    }        

    class PongApplication 
    {
        + Start(Application::EId)
        + Pause(Application::EId)
        + Resume(Application::EId)
        + Stop(Application::EId)
        + Run(Application::EId)
        + OnJoystickDirectionChanged(
            IoStates::EJoystickId id, 
            JoystickState::EDirection direction)
        + OnJoystickButtonChanged(
            IoState:EJoystickId id, bool state)
        + OnSystemButtonChanged(bool state)

    }

    PongApplication -u-|> Application
}

MenuApplication -u--|> Application

ApplicationsTask *-- ApplicationsManager
ApplicationsManager *-- Application
note on link
    Menu is always 
    application [0]
end note

ApplicationsManager *-- MenuApplication
ApplicationsManager *-- IoStates

@enduml
